2009-09-21  Gordon Williams <gordon.williams@collabora.co.uk>

	Another fix for new portrait transition. Make sure no apps are
	resized in the background.
	* src/util/hd-transition.c
	* src/util/hd-transition.h: add hd_transition_is_rotating_to_portrait
	* src/mb/hd-app.c: Now check for hd_transition_is_rotating_to_portrait
	  before resizing an app, as we may not be in portrait mode yet, but
	  we're be resizing before we change state.

2009-09-21  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Fix of the "[r]egression fix for last change".

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_restack):
	  Don't hdrm_restack() and check for portrsit if we're rotating.
	  We may get it wrong and the rotating fsm will restack anyway.
	* src/util/hd-transition.c (hd_transition_rotating_fsm):
	  hdrm_restack() in FADE_IN not eariler.

	Let's see if we'll have fix of the fix of the fix.

2009-09-18  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-dialog.c (hd_dialog_request_geometry):
	  Now really do bottom-align dialogs.

2009-09-18  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/util/hd-transition.c (hd_transition_close_app): Don't leak the
	timeline object, it's enough to have one reference count for it. 
	Related to NB#134230 and NB#98132.

2009-09-18  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	139325 [S3 Proposal] Device turns to Portrait mode completely

	We were too optimistinc and turned to portrait even if there was
	a non-portrait capable system dialog.  This caused us to land in 
	APP state but turned to portrait and when the app exited we went
	back to HOME and didn't rotate back to landscape.  This is what
	one gets when he add performance hacks to a stable logic.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_portrait_forecast):
	  Be more careful about starting the rotation transition.
	  Now only do that if we are idling in landscape and no
	  sysmodal dialogs are in the way.
	* src/util/hd-transition.c (hd_transition_is_rotating):
	  Added.
